--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="gameContainer" id="gameContainer">
       <div class="gameStatsBar">
-        <div>
+        <div class="cardCounterContainer">
           <img
             class="cardsIcon"
             src="images/icons/playing-cardsfreepik.png"
@@ -24,6 +24,7 @@
           />
           <div id="cardCounter">81</div>
         </div>
+        <div id="timer">0:00</div>
       </div>
       <div class="setCardsContainer" id="setCardsContainer">
         <!-- testing -->
