--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link rel="preload" as="image" href="images/setcards/empty_diamond.png" />
+    <link rel="preload" as="image" href="images/setcards/empty_oval.png" />
+    <link rel="preload" as="image" href="images/setcards/empty_snake.png" />
+    <link rel="preload" as="image" href="images/setcards/shaded_diamond.png" />
+    <link rel="preload" as="image" href="images/setcards/shaded_oval.png" />
+    <link rel="preload" as="image" href="images/setcards/shaded_snake.png" />
+    <link rel="preload" as="image" href="images/setcards/shaded_diamond.png" />
+    <link rel="preload" as="image" href="images/setcards/solid_diamond.png" />
+    <link rel="preload" as="image" href="images/setcards/solid_oval.png" />
+    <link rel="preload" as="image" href="images/setcards/solid_snake.png" />
   </head>
   <body>
     <div class="gameContainer" id="gameContainer">
@@ -30,7 +40,7 @@
         <!-- testing -->
       </div>
     </div>
-
+    <footer>v2</footer>
     <script src="app.js"></script>
   </body>
 </html>
