--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- testing -->
       </div>
     </div>
-    <footer></footer>
+    <footer>v2</footer>
     <script src="app.js"></script>
   </body>
 </html>
